--- a/Direct iOS/Base.lproj/Main.storyboard
+++ b/Direct iOS/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="okg-Sd-9ug">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VRW-hd-5uR">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -177,7 +177,7 @@
         <!--Home View Controller-->
         <scene sceneID="mPF-pp-YzK">
             <objects>
-                <viewController storyboardIdentifier="HomeVC" id="MJC-Ie-Ke0" customClass="HomeViewController" customModule="Direct_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="MJC-Ie-Ke0" customClass="HomeViewController" customModule="Direct_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="MiF-Gy-W2v">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -189,17 +189,18 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="1" green="0.9539750405332883" blue="0.64933291415562511" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="3O1-mu-v79" firstAttribute="centerX" secondItem="MiF-Gy-W2v" secondAttribute="centerX" id="Bwz-f9-YcA"/>
                             <constraint firstItem="3O1-mu-v79" firstAttribute="centerY" secondItem="MiF-Gy-W2v" secondAttribute="centerY" id="ijl-PO-o8D"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="UQL-ck-y5N"/>
                     </view>
+                    <navigationItem key="navigationItem" id="nr0-ca-MZ2"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EGp-lF-Ohf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2639" y="133"/>
+            <point key="canvasLocation" x="132" y="2693"/>
         </scene>
         <!--Log In View Controller-->
         <scene sceneID="2ST-zl-ecs">
@@ -283,11 +284,186 @@
             </objects>
             <point key="canvasLocation" x="1836" y="538"/>
         </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="h98-B0-WLS">
+            <objects>
+                <tabBarController storyboardIdentifier="HomeVC" id="VRW-hd-5uR" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="H2p-Pl-ihC">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="ika-BM-Vct" kind="relationship" relationship="viewControllers" id="GqK-Nd-dka"/>
+                        <segue destination="u2Q-kH-WlL" kind="relationship" relationship="viewControllers" id="7JB-9c-5oT"/>
+                        <segue destination="lW2-aL-kP0" kind="relationship" relationship="viewControllers" id="yGD-LG-20D"/>
+                        <segue destination="3c9-FK-e48" kind="relationship" relationship="viewControllers" id="m18-Pr-tAV"/>
+                        <segue destination="MAs-nz-Lsu" kind="relationship" relationship="viewControllers" id="VNa-Bb-iKa"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="i2D-Z2-0IR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="132" y="1277"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="Lzp-0i-WR5">
+            <objects>
+                <navigationController id="ika-BM-Vct" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Home" image="house" catalog="system" id="sEa-9J-PSe"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YvI-Nq-IMt">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="MJC-Ie-Ke0" kind="relationship" relationship="rootViewController" id="oYo-Wv-e1K"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6F0-Ka-uxW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="132" y="1988"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="SIu-WC-4f5">
+            <objects>
+                <viewController id="Xoy-gd-lel" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9bj-SR-ORr">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="Nnk-Oa-PXD"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="ugS-IV-9gu"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hqr-b9-EWg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="832" y="2693"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="BKH-Mr-5fa">
+            <objects>
+                <viewController id="6XP-b1-xNp" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mbd-VJ-L8M">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="VNh-fm-6Vv"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="NAc-q1-rb7"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kqd-xS-A20" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1529" y="2696"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="cYf-cj-dbq">
+            <objects>
+                <viewController id="oK3-QD-yAw" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8yU-TO-03A">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="MsN-3A-qgi"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="WmC-IM-sPf"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2z8-J4-iPV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2219" y="2696"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="fGJ-Dy-XPG">
+            <objects>
+                <viewController id="F1f-5j-DaU" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AeW-Lc-wan">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="Mf4-3N-Aoi"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="kKe-Cf-t0e"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XKc-YI-rzr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2903" y="2696"/>
+        </scene>
+        <!--Subscriptions-->
+        <scene sceneID="VUI-6y-iqj">
+            <objects>
+                <navigationController id="u2Q-kH-WlL" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Subscriptions" image="bell" catalog="system" id="H5d-aK-SnX"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lmG-uu-4ec">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Xoy-gd-lel" kind="relationship" relationship="rootViewController" id="SjR-bh-R9F"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eqD-uS-Fe0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="832" y="1988"/>
+        </scene>
+        <!--Account-->
+        <scene sceneID="xqh-Bs-NOS">
+            <objects>
+                <navigationController id="MAs-nz-Lsu" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Account" image="person" catalog="system" id="oJj-kY-vwM"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xdi-Ff-To6">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="F1f-5j-DaU" kind="relationship" relationship="rootViewController" id="wcc-Si-kHm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ppf-6W-GcL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2903" y="1988"/>
+        </scene>
+        <!--Messages-->
+        <scene sceneID="EXx-yS-LY7">
+            <objects>
+                <navigationController id="3c9-FK-e48" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Messages" image="message" catalog="system" id="TLW-f2-YA4"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="uT1-4M-zvY">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="oK3-QD-yAw" kind="relationship" relationship="rootViewController" id="Lfx-go-Yl1"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5gd-DZ-1zN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2212" y="1988"/>
+        </scene>
+        <!--Post-->
+        <scene sceneID="SZe-Si-tkf">
+            <objects>
+                <navigationController id="lW2-aL-kP0" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Post" image="plus" catalog="system" id="Ue3-dd-djD"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="MSS-P8-m39">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="6XP-b1-xNp" kind="relationship" relationship="rootViewController" id="K0H-Nw-CJw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z9U-mb-3wV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1525" y="1988"/>
+        </scene>
     </scenes>
-    <resources>
-        <image name="logo.png" width="1920" height="1080"/>
-    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="vOn-ex-GAw"/>
     </inferredMetricsTieBreakers>
+    <resources>
+        <image name="bell" catalog="system" width="128" height="124"/>
+        <image name="house" catalog="system" width="128" height="110"/>
+        <image name="logo.png" width="1920" height="1080"/>
+        <image name="message" catalog="system" width="128" height="113"/>
+        <image name="person" catalog="system" width="128" height="117"/>
+        <image name="plus" catalog="system" width="128" height="113"/>
+    </resources>
 </document>
